--- a/responsive.css
+++ b/responsive.css
@@ -24,7 +24,7 @@ img, embed, object, video {
 }
 
 .hero {
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -128,6 +128,10 @@ img, embed, object, video {
     order: 1;
     width: 50%;
   }
+  .top-news {
+    order: 2;
+    width: 50%;
+  }
 
   .truncate {
     max-width: 70%;
@@ -137,21 +141,29 @@ img, embed, object, video {
 
 @media screen and (min-width: 700px) {
   .hero {
-    width: 60%;
+    width: 55%;
+    order: 0;
+    height: 300px;
   }
 
   .top-news {
     order: 1;
     width: 40%;
+
   }
 
-  .scores {
+  .scores__table {
     order: 2;
-    width: 60%;
+    width: 50%;
   }
 
   .weather {
-    order: 3;
+    width: 30%;
+    order: 4;
+  }
+
+  .scores__table td:nth-child(n) {
+    text-align: center;
   }
 
 }
@@ -161,5 +173,31 @@ img, embed, object, video {
     width: 850px;
     margin-left: auto;
     margin-right: auto;
+  }
+  .hero{
+    width: 100%;
+    order:0;
+  }
+
+  .top-news {
+    width: 50%;
+    order: 1;
+  }
+  .weather {
+    width: 50%;
+    order: 2;
+  }
+  .recent-news {
+    width: 50%;
+    order: 3;
+  }
+  .scores {
+    width: 60%;
+    order: 4;
+  }
+
+
+  .scores__table td:nth-child(n) {
+    text-align: center;
   }
 }
